Add methods to sign in, sign out and access users

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FirebaseExample</string>
+    <string name="auth_failed">AUTHENTICATION FAILED</string>
 </resources>
